--- a/hack/src/App.css
+++ b/hack/src/App.css
@@ -87,7 +87,7 @@
 }
 
 .dark .shimmer {
-  background: linear-gradient(90deg, #374151 25%, #4b5563 50%, #374151 75%);
+  background: linear-gradient(90deg, #000000 25%, #000000 50%, #000000 75%);
   background-size: 200% 100%;
 }
 
